manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: cjc4
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: miniflux
